--- a/doc/README
+++ b/doc/README
@@ -12,28 +12,26 @@ Documentation (manual):
 The documentation of Gnuastro is written in Texinfo. The main source
 file is `gnuastro.texi'.
 
-Webpage files:
---------------
+Webpage (only for maintainer)
+-----------------------------
 
-The webpage files are stored in the `www/gnuastro' directory. If you
-actually checkout the webpage files from gnu.org, then there will also
-be another directory: `MathJax', which keeps all the MathJax source
-code. Although this directory is not too heavy (In total less than
-40MB), it contains a very very very large number of files (~40,000)!!!
-This makes all kinds of syncing tools you have very very very very
-very very slow!
+The top Gnuastro webpage files are also held here, after all, a webpage is
+another form of documentation. To update the webpage, run the following
+script:
 
-To solve this problem, after checking out the webpage files in the
-`www' directory, you can remove the MathJax directory. My solution to
-the problem was to checkout all the webpage files in another directory
-that I don't sync. After the checkout is complete there, I remove the
-`index.html' file and `manual' directory.
+      $ ./forwebpage
 
-If you also choose to follow this path too, then the consequence is
-that the mathematical equations will not load.
+This script will generate the webpage using Gnulib's gendocs.sh script
+(which was part of the bootstrapping process), then it will copy them all
+in a specified directory anywhere you like (specified by the TOPWEBCHECKOUT
+shell variable). You don't have to version control any of the files in that
+directory, but it is easiest to have a fixed place since CVS needs a local
+copy. Unfortunately the GNU webpage runs on CVS! Read the top comments of
+the `forwebpage' script for instructions on what to do for the first time
+and later times.
 
-Update MathJax:
----------------
+Update MathJax (for the webpage, only for maintainer)
+-----------------------------------------------------
 
 There is a script in the `MathJax' directory on the Gnuastro webpage
 directory to update MathJax (`addmissing.sh'). You can get a recent
@@ -44,13 +42,4 @@ new files from MathJax to the checked out files and then you can use
 directories. Just note that CVS is an antique(!) and so you have to
 add all the files in separate directories separately, first add the
 directory, then CVS will find the untracked files inside it and add
-them one by one! Unfortunately the GNU webpage runs on CVS.
-
-Update the webpage documentation:
----------------------------------
-
-To make the full documentation in all the formats, run the following
-command (you have to be a Gnuastro developer to actually commit the
-resulting files to the Gnuastro webpage.)
-
-      $ ./forwebpage.sh
+them one by one!
